# flappy-bird-sfml

./: .clang-format  .gitignore  CMakeLists.txt
src/: Bird.cpp  Bird.hpp  Constants.hpp  Pipe.cpp  Pipe.hpp  PipePair.cpp  PipePair.hpp  main.cpp
